2015-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved to namespaces, verified compatibility with TYPO3 CMS 7, resolves #67305
	* Moved documentation to reST, resolves #67307
	* Updated unit tests, resolves #67308

2014-05-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #58650
	* Released to TER as version 1.5.0, resolves #58651

2013-11-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed unused locallang file, resolves #53568

2013-05-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #48577
	* Released to TER as version 1.4.0

2013-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.0, resolves #46834
	* Released to TER as version 1.3.0

2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2012-06-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 4.7, raised requirement to TYPO3 4.5, resolves #38282

2012-01-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.1.0 to TER

2012-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added local storage of context data and retrieval API, resolves #33384

2012-01-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added proper support for multidimensional contexts, resolves #33124
	* Added unit tests for new cleanup method

2010-10-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release