@@ -1,3 +1,7 @@
+2016-04-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Reformatted code according to PSR-2, resolves #75644
+
 2015-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Moved to namespaces, verified compatibility with TYPO3 CMS 7, resolves #67305
